--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txt_profileaddTitle"
+            android:id="@+id/txt_profileTitle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
@@ -26,7 +26,7 @@
             android:textStyle="bold"
             android:layout_marginTop="6dp"/>
         <ImageButton
-            android:id="@+id/btn_profileaddBack"
+            android:id="@+id/btn_profileBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -35,6 +35,16 @@
             android:clickable="false"
             android:layout_alignParentLeft ="true"
             android:src="@mipmap/arrarryleft_normal" />
+        <ImageButton
+            android:id="@+id/btn_profileAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="3dp"
+            android:background="#00000000"
+            android:clickable="false"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/add_normal" />
     </RelativeLayout>
     <ListView
         android:layout_width="wrap_content"
