--- a/project/app/src/main/res/layout/petbus_profileadd.xml
+++ b/project/app/src/main/res/layout/petbus_profileadd.xml
@@ -18,7 +18,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txt_profileTitle"
+            android:id="@+id/txt_profileaddTitle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
@@ -28,7 +28,7 @@
             android:textStyle="bold"
             android:layout_marginTop="6dp"/>
         <ImageButton
-            android:id="@+id/btn_profileBack"
+            android:id="@+id/btn_profileaddBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -38,7 +38,7 @@
             android:layout_alignParentLeft ="true"
             android:src="@mipmap/arrarryleft_normal" />
         <ImageButton
-            android:id="@+id/btn_profileAdd"
+            android:id="@+id/btn_profileaddAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -55,7 +55,7 @@
         android:layout_weight="1"/>
 
     <Button
-        android:id="@+id/btn_profileNext"
+        android:id="@+id/btn_profileaddNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/infofinish"
