TerryCheng20190615:Style the textView to style.xml

--- a/project/app/src/main/res/layout/petbus_action.xml
+++ b/project/app/src/main/res/layout/petbus_action.xml
@@ -22,8 +22,7 @@
             android:clickable="true"
             android:gravity="center_horizontal"
             android:text="@string/petdiary"
-            android:textColor="#ffffff"
-            android:textStyle="bold" />
+            style="@style/titlebar_text" />
         <ImageButton
             android:id="@+id/leftreturn_button"
             android:layout_width="wrap_content"
