--- a/project/app/src/main/res/layout/record_date.xml
+++ b/project/app/src/main/res/layout/record_date.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="30sp"
+            style="@style/diary_date_text"
             android:text="record_1!"/>
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
