--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -12,13 +12,13 @@
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="horizontal">
-
         <TextView
             android:id="@+id/record_times"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:gravity="center"
-            android:textSize="20sp"
+            android:gravity="center|right"
+            android:layout_weight="1"
+            style="@style/diary_record_text"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:text="11:50"/>
@@ -30,10 +30,11 @@
             android:src="@mipmap/fade" />
         <TextView
             android:id="@+id/recode_actioin_text"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:gravity="center"
-            android:textSize="20sp"
+            style="@style/diary_record_text"
+            android:gravity="center|left"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:text="@string/fead"/>
@@ -44,7 +45,6 @@
         android:layout_weight="1"
         android:background="#00000000"
         android:id="@+id/information_layout"
-
         android:orientation="horizontal">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -86,8 +86,8 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:singleLine="false"
-                android:text="这个是日志。日志上面的图片应该是照片之类的东西"
-                android:textSize="15sp" />
+                style="@style/diary_remark_text"
+                android:text="这个是日志。日志上面的图片应该是照片之类的东西" />
         </LinearLayout>
         <View
             android:layout_width="2dp"
@@ -112,7 +112,7 @@
                 android:id="@+id/nickname_text"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:textSize="20sp"
+                style="@style/diary_record_text"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="50dp"
                 android:text="@string/petname"/>
