--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -10,5 +10,25 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
     </style>
+    <!-- https://www.cnblogs.com/tommylemon/p/5700531.html -->
 
+
+
+    <style name="titlebar_text">
+        <item name="android:textSize">23dp</item>
+        <item name="android:textColor">#FF00FF</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="diary_date_text">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="diary_record_text">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="diary_remark_text">
+        <item name="android:textSize">15dp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
