--- a/project/app/src/main/res/layout/actionfragment_diary.xml
+++ b/project/app/src/main/res/layout/actionfragment_diary.xml
@@ -95,15 +95,22 @@
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:background="#aa000000" />
-    <EditText
-        android:id="@+id/remark_text_input"
+    <LinearLayout
         android:layout_weight="1"
         android:layout_height="1dp"
         android:layout_width="match_parent"
-        android:hint="@string/remark"
-        android:gravity="top"
-        android:scrollbars="vertical"
-        android:inputType="textMultiLine"/>
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/remark_text_input"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:hint="@string/remark"
+            android:gravity="top"
+            android:scrollbars="vertical"
+            android:inputType="textMultiLine"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
