antiwey@gmail.com20190615: 1. strings.xml中新增“保存” 2. 修正petbus_firstvisit.xml 中的button id 3. 修改petbus_profileadd.xml，删除无用button, 更改button id 4. dbmanager中，新增方法 get_userid() 5. middleware中，新增方法newPet(),getPetInfo() 6. 数据库table petbus_petinfo中，新增weight列，用于记录宠物体重 7. petbus_firstvisit中，生日栏添加日期选择功能

--- a/project/app/src/main/res/layout/petbus_firstvisit.xml
+++ b/project/app/src/main/res/layout/petbus_firstvisit.xml
@@ -23,7 +23,7 @@
         android:layout_weight="1"/>
 
     <Button
-        android:id="@+id/id_nextBtn"
+        android:id="@+id/btn_firstvisitNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/infofinish"
