--- a/project/app/src/main/res/layout/petbus_profileadd.xml
+++ b/project/app/src/main/res/layout/petbus_profileadd.xml
@@ -37,20 +37,11 @@
             android:clickable="false"
             android:layout_alignParentLeft ="true"
             android:src="@mipmap/arrarryleft_normal" />
-        <ImageButton
-            android:id="@+id/btn_profileaddAdd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="3dp"
-            android:background="#00000000"
-            android:clickable="false"
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/add_normal" />
     </RelativeLayout>
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/info_profileadd"
         android:name="com.petbus.tj.petbus.ui.info_fragment.infofragment"
         android:layout_weight="1"/>
 
@@ -58,7 +49,7 @@
         android:id="@+id/btn_profileaddNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/infofinish"
+        android:text="@string/infosave"
         android:textSize="17dp"
         android:layout_marginBottom="20dp"/>
 
