antiwey@gmail.com20190616：新增宠物档案页面，列表显示功能

--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -48,9 +48,8 @@
     </RelativeLayout>
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/list_pet"
+        android:divider="#00000000">
     </ListView>
-
-
-
 </LinearLayout>
