TerryCheng20190617: 1。优化了welcome界面，删除了不必要的fragment 2。优化了dbmanager。 3。宠物数量从数据库中获取。而不是写死了。

--- a/project/app/src/main/res/layout/petbus_welcome.xml
+++ b/project/app/src/main/res/layout/petbus_welcome.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".petbus_welcome">
 
-    <FrameLayout
-        android:id="@+id/welcome_fragment"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp">
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:text="Welcome!"/>
 
 </android.support.constraint.ConstraintLayout>
