--- a/project/app/src/main/res/layout/petbus_profileadd.xml
+++ b/project/app/src/main/res/layout/petbus_profileadd.xml
@@ -46,7 +46,7 @@
         android:layout_weight="1"/>
 
     <Button
-        android:id="@+id/btn_profileaddNext"
+        android:id="@+id/btn_profileaddSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/infosave"
