--- a/project/app/src/main/res/layout/list_pet.xml
+++ b/project/app/src/main/res/layout/list_pet.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content"
     android:background="@mipmap/listpetbackground">
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical"
         android:layout_weight="1">
@@ -23,7 +23,8 @@
                 android:layout_marginLeft="50dp"/>
             <ImageButton
                 android:layout_width="30dp"
-                android:layout_height="40dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
                 android:src="@mipmap/editbutton"
                 android:layout_toRightOf="@id/info_name"/>
         </RelativeLayout>
@@ -62,8 +63,8 @@
         </RelativeLayout>
     </LinearLayout>
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center_vertical|right"
         android:layout_weight="1">
         <ImageView
