--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -46,10 +46,10 @@
             android:layout_alignParentRight="true"
             android:src="@mipmap/add_normal" />
     </RelativeLayout>
+
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
         android:id="@+id/list_pet"
-        android:divider="#00000000">
-    </ListView>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="#00000000"></ListView>
 </LinearLayout>
