--- a/project/app/src/main/res/layout/actionfragment_actionrecord.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecord.xml
@@ -65,17 +65,16 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
-                        <ImageButton
-                            android:id="@+id/photo_button"
+                        <com.petbus.tj.petbus.ui.CircleImageView
+                            android:id="@+id/pet_photo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginRight="3dp"
+                            style="@style/headportrait"
                             android:background="#00000000"
                             android:clickable="false"
                             android:src="@mipmap/photo_normal" />
                         <TextView
-                            android:id="@+id/title_text"
+                            android:id="@+id/pet_nickname_text"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:clickable="true"
