--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -107,6 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="center"
+                style="@style/headportrait"
                 android:src="@mipmap/fade" />
             <TextView
                 android:id="@+id/nickname_text"
