--- a/project/app/src/main/res/layout/actionfragment_diary.xml
+++ b/project/app/src/main/res/layout/actionfragment_diary.xml
@@ -54,13 +54,20 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
+            android:id="@+id/pet_select"
             android:orientation="horizontal">
-            <Spinner
-                android:id="@+id/pet_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
                 android:gravity="center"
-                android:choiceMode="singleChoice"/>
+                android:orientation="horizontal">
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                style="@style/diary_addfragment_text"
+                android:gravity="left"
+                android:text=">"/>
         </LinearLayout>
     </LinearLayout>
     <View
