--- a/project/app/src/main/res/layout/list_pet.xml
+++ b/project/app/src/main/res/layout/list_pet.xml
@@ -21,7 +21,7 @@
                 android:text="猫猫1"
                 android:textSize="17dp"
                 android:layout_marginLeft="50dp"/>
-            <ImageButton
+            <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="5dp"
@@ -68,8 +68,8 @@
         android:gravity="center_vertical|right"
         android:layout_weight="1">
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/info_photo"
             android:src="@mipmap/empty"
             android:layout_marginRight="50dp"/>
