--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -49,6 +49,7 @@
 
     <ListView
         android:id="@+id/list_pet"
+        android:descendantFocusability="blocksDescendants"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="#00000000"></ListView>
