TerryCheng20190623:1.添加记录，可以选择多个宠物。 2。记录的显示，目前就一个显示出来了。

--- a/project/app/src/main/res/layout/actionfragment_diary.xml
+++ b/project/app/src/main/res/layout/actionfragment_diary.xml
@@ -60,7 +60,64 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:id="@+id/pet_list_layout"
                 android:orientation="horizontal">
+                <com.petbus.tj.petbus.ui.CircleImageView
+                    android:gravity="center"
+                    android:id="@+id/pet_photo_1"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="80dp"
+                    android:maxWidth="80dp"
+                    android:minHeight="80dp"
+                    android:minWidth="80dp"
+                    android:layout_marginRight ="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <com.petbus.tj.petbus.ui.CircleImageView
+                    android:gravity="center"
+                    android:id="@+id/pet_photo_2"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="80dp"
+                    android:maxWidth="80dp"
+                    android:minHeight="80dp"
+                    android:minWidth="80dp"
+                    android:layout_marginRight ="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <com.petbus.tj.petbus.ui.CircleImageView
+                    android:gravity="center"
+                    android:id="@+id/pet_photo_3"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="80dp"
+                    android:maxWidth="80dp"
+                    android:minHeight="80dp"
+                    android:minWidth="80dp"
+                    android:layout_marginRight ="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <com.petbus.tj.petbus.ui.CircleImageView
+                    android:gravity="center"
+                    android:id="@+id/pet_photo_4"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="80dp"
+                    android:maxWidth="80dp"
+                    android:minHeight="80dp"
+                    android:minWidth="80dp"
+                    android:layout_marginRight ="40dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
             </RelativeLayout>
             <TextView
                 android:layout_width="wrap_content"
