--- a/project/app/src/main/res/layout/petview_select.xml
+++ b/project/app/src/main/res/layout/petview_select.xml
@@ -20,10 +20,23 @@
         android:layout_height="1dp"
         android:background="@color/colorBlack" /> 
 
-    <com.petbus.tj.petbus.ui.HorizontalListView
+    <GridView
         android:id="@+id/horizon_listview"
+        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="250dip"
-        android:layout_alignParentTop="true">
-    </com.petbus.tj.petbus.ui.HorizontalListView>
+        android:layout_height="300dip"
+        android:numColumns="2"
+        android:columnWidth="90dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:overScrollMode="never"
+        android:clickable="false"
+        android:layout_alignParentTop="true"/>
+    <Button
+        android:gravity="center"
+        android:id="@+id/confirm_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/confirm" />
 </LinearLayout>
