--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -97,26 +97,109 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:layout_marginLeft="5dp"
             android:background="#00000000"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="50dp"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/recode_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="center"
-                style="@style/headportrait"
-                android:src="@mipmap/fade" />
-            <TextView
-                android:id="@+id/nickname_text"
+            android:orientation="horizontal">
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                style="@style/diary_record_text"
+                android:layout_weight="1"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="50dp"
-                android:text="@string/petname"/>
+                android:background="#00000000"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="50dp"
+                android:orientation="vertical">
+                <com.petbus.tj.petbus.ui.CircleImageView
+                    android:id="@+id/recode_image_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="center"
+                    style="@style/headportrait"
+                    android:src="@mipmap/fade" />
+                <TextView
+                    android:id="@+id/nickname_text_1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    style="@style/diary_record_text"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="50dp"
+                    android:text="@string/petname"/>
+            </LinearLayout>
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:background="#00000000"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="50dp"
+                android:orientation="vertical">
+                <com.petbus.tj.petbus.ui.CircleImageView
+                    android:id="@+id/recode_image_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="center"
+                    style="@style/headportrait"
+                    android:src="@mipmap/fade" />
+                <TextView
+                    android:id="@+id/nickname_text_2"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    style="@style/diary_record_text"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="50dp"
+                    android:text="@string/petname"/>
+            </LinearLayout>
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:background="#00000000"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="50dp"
+                android:orientation="vertical">
+                <com.petbus.tj.petbus.ui.CircleImageView
+                    android:id="@+id/recode_image_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="center"
+                    style="@style/headportrait"
+                    android:src="@mipmap/fade" />
+                <TextView
+                    android:id="@+id/nickname_text_3"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    style="@style/diary_record_text"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="50dp"
+                    android:text="@string/petname"/>
+            </LinearLayout>
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:background="#00000000"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="50dp"
+                android:orientation="vertical">
+                <com.petbus.tj.petbus.ui.CircleImageView
+                    android:id="@+id/recode_image_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="center"
+                    style="@style/headportrait"
+                    android:src="@mipmap/fade" />
+                <TextView
+                    android:id="@+id/nickname_text_4"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    style="@style/diary_record_text"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="50dp"
+                    android:text="@string/petname"/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
