--- a/project/app/src/main/res/layout/actionfragment_actionrecord.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecord.xml
@@ -65,7 +65,7 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
-                        <com.petbus.tj.petbus.ui.CircleImageView
+                        <ImageView
                             android:id="@+id/pet_photo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
