TerryCheng20190714: 1。界面的调整，第一个版本。。

--- a/project/app/src/main/res/layout/record_date.xml
+++ b/project/app/src/main/res/layout/record_date.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="1dp"
             android:layout_weight="1"
             android:layout_marginLeft="50dp"
+            android:layout_marginRight="5dp"
             android:layout_height="match_parent">
             <View
                 android:layout_width="match_parent"
@@ -26,6 +27,10 @@
                 android:background="#00000000" />
         </LinearLayout>
         <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:id="@+id/daily_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,6 +39,7 @@
             android:text="record_1!"/>
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
+            android:layout_marginLeft="5dp"
             android:layout_marginRight="50dp"
             android:layout_width="1dp"
             android:layout_weight="1"
