--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             style="@style/diary_record_text"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="30dp"
             android:text="11:50"/>
         <ImageView
             android:id="@+id/record_action_icon"
@@ -35,28 +35,28 @@
             android:layout_height="fill_parent"
             style="@style/diary_record_text"
             android:gravity="center|left"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginRight="5dp"
             android:text="@string/fead"/>
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="#00000000"
         android:id="@+id/information_layout"
         android:orientation="horizontal">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00000000"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical">
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <View
@@ -70,8 +70,8 @@
                     android:layout_height="wrap_content"
                     android:scaleType="center"
                     android:adjustViewBounds="true"
-                    android:maxHeight="100dp"
-                    android:maxWidth="100dp"
+                    android:maxHeight="200px"
+                    android:maxWidth="400px"
                     android:src="@mipmap/fade" />
                 <View
                     android:layout_width="1dp"
@@ -87,11 +87,11 @@
                 android:layout_marginRight="5dp"
                 android:singleLine="false"
                 style="@style/diary_remark_text"
-                android:text="这个是日志。日志上面的图片应该是照片之类的东西" />
+                android:text="这个是日志" />
         </LinearLayout>
         <View
             android:layout_width="2dp"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:background="#aa000000" />
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
@@ -104,12 +104,12 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="30dp"
                 android:background="#00000000"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="vertical">
-                <com.petbus.tj.petbus.ui.CircleImageView
+                <ImageView
                     android:id="@+id/recode_image_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -132,9 +132,9 @@
                 android:layout_marginLeft="5dp"
                 android:background="#00000000"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="vertical">
-                <com.petbus.tj.petbus.ui.CircleImageView
+                <ImageView
                     android:id="@+id/recode_image_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -157,9 +157,9 @@
                 android:layout_marginLeft="5dp"
                 android:background="#00000000"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="vertical">
-                <com.petbus.tj.petbus.ui.CircleImageView
+                <ImageView
                     android:id="@+id/recode_image_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -181,10 +181,10 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="5dp"
                 android:background="#00000000"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="50dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="vertical">
-                <com.petbus.tj.petbus.ui.CircleImageView
+                <ImageView
                     android:id="@+id/recode_image_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -197,7 +197,7 @@
                     android:layout_height="fill_parent"
                     style="@style/diary_record_text"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="50dp"
+                    android:layout_marginRight="5dp"
                     android:text="@string/petname"/>
             </LinearLayout>
         </LinearLayout>
