--- a/project/app/src/main/res/values/colors.xml
+++ b/project/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorHeadtitle">#F8F8F8</color>
     <color name="color_f2f2f2">#c2a2b2</color>
     <color name="color_ff4631">#ff4631</color>
     <color name="color_999999">#999999</color>
