--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -22,15 +22,15 @@
 
     <style name="titlebar_text">
         <item name="android:textSize">23dp</item>
-        <item name="android:textColor">#FF00FF</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="diary_date_text">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:textColor">#000000</item>
     </style>
     <style name="diary_record_text">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:textColor">#000000</item>
     </style>
     <style name="diary_remark_text">
