--- a/project/app/src/main/res/layout/actionfragment_actionrecord.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecord.xml
@@ -67,8 +67,8 @@
                         android:orientation="vertical">
                         <ImageView
                             android:id="@+id/pet_photo"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
                             style="@style/headportrait"
                             android:background="#00000000"
                             android:clickable="false"
