TerryCheng20190716:1.优化action的listview。提前加载图片等信息。

--- a/project/app/src/main/res/layout/actionfragment_actionrecord.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecord.xml
@@ -107,11 +107,10 @@
             android:id="@+id/actionview_lineralayout"
             android:layout_weight="1"
             android:orientation="horizontal">
-            <ListView
+            <com.petbus.tj.petbus.ui.actionlistview
                 android:id="@+id/list_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </ListView>
+                android:layout_height="match_parent"/>
         </LinearLayout>
     </LinearLayout>
 
