--- a/project/app/src/main/res/layout/petbus_action.xml
+++ b/project/app/src/main/res/layout/petbus_action.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/app_background"
     tools:context=".petbus_action">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="53dp"
         android:background="@color/colorHeadtitle"
         android:gravity="center"
         android:id="@+id/topbar_lineralayout"
@@ -66,6 +67,10 @@
             android:src="@mipmap/overview_normal" />
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="#F5F5F5" />
     <FrameLayout
         android:id="@+id/fragment"
         android:layout_width="match_parent"
