--- a/project/app/src/main/res/layout/record_date.xml
+++ b/project/app/src/main/res/layout/record_date.xml
@@ -2,47 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical"
-            android:layout_width="1dp"
+        android:layout_marginTop="18dp"
+        android:background="@color/app_background"
+        android:layout_height="40dp">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="33dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="41dp"
+        android:layout_marginRight="5dp"
+        android:orientation="vertical">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
             android:layout_weight="1"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="5dp"
-            android:layout_height="match_parent">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#00000000" />
-            <View
-                android:layout_width="wrap_content"
-                android:gravity="center"
-                android:layout_height="2dp"
-                android:background="#aa000000" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#00000000" />
-        </LinearLayout>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/daily_text"
+            android:background="#00000000" />
+        <View
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            style="@style/diary_date_text"
-            android:text="record_1!"/>
+            android:layout_height="2dp"
+            android:background="#aa000000"
+            android:gravity="center" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="#00000000" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/daily_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center"
+        android:text="record_1!"
+        android:textSize="12sp" />
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="50dp"
-            android:layout_width="1dp"
-            android:layout_weight="1"
+            android:layout_width="33dp"
             android:layout_height="match_parent">
             <View
                 android:layout_width="match_parent"
