--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -2,202 +2,135 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:background="@color/app_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="#00000000"
-        android:layout_weight="1"
-        android:gravity="center"
+        android:layout_height="24dp"
+        android:layout_marginLeft="63dp"
+        android:background="@color/app_background"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/record_times"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center|right"
-            android:layout_weight="1"
-            style="@style/diary_record_text"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="30dp"
-            android:text="11:50"/>
-        <ImageView
-            android:id="@+id/record_action_icon"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:scaleType="center"
-            android:src="@mipmap/fade" />
-        <TextView
-            android:id="@+id/recode_actioin_text"
-            android:layout_weight="1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
             style="@style/diary_record_text"
-            android:gravity="center|left"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="5dp"
+            android:textSize="12sp"
+            android:text="11:50"/>
+        <TextView
+            android:layout_marginLeft="23dp"
+            android:id="@+id/recode_actioin_text"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:textSize="12sp"
             android:text="@string/fead"/>
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="#00000000"
+        android:layout_height="76dp"
+        android:background="@color/app_background"
         android:id="@+id/information_layout"
         android:orientation="horizontal">
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#00000000"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"
-            android:orientation="vertical">
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="68dp"
+                android:layout_height="68dp"
+                android:background="#00000000"
+                android:layout_marginLeft ="19dp"
+                android:id="@+id/pet_list_layout"
                 android:orientation="horizontal">
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#00000000" />
                 <ImageView
-                    android:id="@+id/recode_petportrait_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:scaleType="center"
+                    android:gravity="center"
+                    android:id="@+id/recode_image_4"
+                    android:background="#00000000"
+                    android:clickable="false"
                     android:adjustViewBounds="true"
-                    android:maxHeight="200px"
-                    android:maxWidth="400px"
-                    android:src="@mipmap/fade" />
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#00000000" />
-            </LinearLayout>
+                    android:maxHeight="30dp"
+                    android:maxWidth="30dp"
+                    android:minHeight="30dp"
+                    android:minWidth="30dp"
+                    android:layout_marginTop ="19dp"
+                    android:layout_marginLeft ="40dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <ImageView
+                    android:gravity="center"
+                    android:id="@+id/recode_image_3"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="30dp"
+                    android:maxWidth="30dp"
+                    android:minHeight="30dp"
+                    android:minWidth="30dp"
+                    android:layout_marginTop ="19dp"
+                    android:layout_marginLeft ="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <ImageView
+                    android:gravity="center"
+                    android:id="@+id/recode_image_2"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="30dp"
+                    android:maxWidth="30dp"
+                    android:minHeight="30dp"
+                    android:minWidth="30dp"
+                    android:layout_marginTop ="19dp"
+                    android:layout_marginLeft ="18dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <ImageView
+                    android:gravity="center"
+                    android:id="@+id/recode_image_1"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="30dp"
+                    android:maxWidth="30dp"
+                    android:minHeight="30dp"
+                    android:minWidth="30dp"
+                    android:layout_marginTop ="19dp"
+                    android:layout_marginLeft ="7dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+            </RelativeLayout>
+            <ImageView
+                android:id="@+id/record_action_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:scaleType="center"
+                android:maxHeight="45dp"
+                android:maxWidth="45dp"
+                android:minHeight="45dp"
+                android:minWidth="45dp"
+                android:layout_marginTop ="13dp"
+                android:src="@mipmap/fade" />
             <TextView
                 android:id="@+id/recode_remark_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_width="101dp"
+                android:layout_height="65dp"
+                android:textSize="12sp"
+                android:layout_marginLeft="6dp"
                 android:singleLine="false"
                 style="@style/diary_remark_text"
                 android:text="这个是日志" />
-        </LinearLayout>
-        <View
-            android:layout_width="2dp"
-            android:layout_height="match_parent"
-            android:background="#aa000000" />
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="70dp"
-            android:background="#00000000"
-            android:orientation="horizontal">
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#00000000"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/recode_image_1"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:scaleType="center"
-                    style="@style/headportrait"
-                    android:src="@mipmap/fade" />
-                <TextView
-                    android:id="@+id/nickname_text_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/diary_record_text"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:text="@string/petname"/>
-            </LinearLayout>
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#00000000"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/recode_image_2"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:scaleType="center"
-                    style="@style/headportrait"
-                    android:src="@mipmap/fade" />
-                <TextView
-                    android:id="@+id/nickname_text_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/diary_record_text"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:text="@string/petname"/>
-            </LinearLayout>
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#00000000"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/recode_image_3"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:scaleType="center"
-                    style="@style/headportrait"
-                    android:src="@mipmap/fade" />
-                <TextView
-                    android:id="@+id/nickname_text_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/diary_record_text"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:text="@string/petname"/>
-            </LinearLayout>
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#00000000"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/recode_image_4"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:scaleType="center"
-                    style="@style/headportrait"
-                    android:src="@mipmap/fade" />
-                <TextView
-                    android:id="@+id/nickname_text_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/diary_record_text"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:text="@string/petname"/>
-            </LinearLayout>
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/recode_petportrait_image"
+                android:layout_width="101dp"
+                android:layout_height="68dp"
+                android:scaleType="center"
+                android:adjustViewBounds="true"
+                android:maxHeight="68dp"
+                android:maxWidth="101dp"
+                android:minHeight="68dp"
+                android:minWidth="101dp"
+                android:src="@mipmap/fade" />
     </LinearLayout>
 </LinearLayout>
