--- a/project/app/src/main/res/layout/infofragment.xml
+++ b/project/app/src/main/res/layout/infofragment.xml
@@ -1,117 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/id_imgBtn"
-        android:src="@mipmap/imgbtn"
-        android:background="#FFFF"/>
+        android:layout_width="103dp"
+        android:layout_height="103dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginBottom="50dp"
+        android:background="@color/app_background"
+        android:src="@mipmap/imgbtn" />
+
     <RelativeLayout
-        android:layout_width="250dp"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:paddingTop="30dp">
+        android:layout_marginBottom="13dp">
         <TextView
             android:id="@+id/id_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/infoname"
-            android:textSize="14dp"/>
+            android:paddingTop="12dp"
+            android:textSize="16sp" />
         <EditText
+            android:id="@+id/id_inputName"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:id="@+id/id_inputName"
+            android:layout_toRightOf="@id/id_name"
             android:maxLines="1"
-            android:textSize="14dp"
-            android:layout_toRightOf="@id/id_name"/>
+            android:textSize="16sp" />
     </RelativeLayout>
 
-
     <RelativeLayout
-        android:layout_width="250dp"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp">
+        android:layout_marginBottom="13dp">
         <TextView
             android:id="@+id/id_birth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/infobirth"
-            android:textSize="14dp"/>
+            android:paddingTop="12dp"
+            android:textSize="16sp" />
         <EditText
+            android:id="@+id/id_inputBirth"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:id="@+id/id_inputBirth"
-            android:textSize="14dp"
-            android:layout_toRightOf="@id/id_birth"/>
+            android:layout_toRightOf="@id/id_birth"
+            android:textSize="16sp" />
     </RelativeLayout>
+
     <RelativeLayout
-        android:layout_width="250dp"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="15dp">
+        android:layout_marginBottom="20dp">
         <TextView
             android:id="@+id/id_weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/infoweight"
-            android:textSize="14dp" />
+            android:paddingTop="12dp"
+            android:textSize="16sp" />
         <EditText
+            android:id="@+id/id_inputWeight"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:id="@+id/id_inputWeight"
-            android:hint="                                           kg"
-            android:textSize="14dp"
+            android:layout_toRightOf="@id/id_weight"
+            android:hint="                                       kg"
             android:inputType="number|numberDecimal"
-            android:layout_toRightOf="@id/id_weight"/>
+            android:textSize="16sp" />
     </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:paddingBottom="15dp">
 
+    <RelativeLayout
+        android:layout_width="192dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp">
         <TextView
             android:id="@+id/id_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/infogender"
-            android:textSize="14dp" />
+            android:paddingTop="5dp"
+            android:textSize="16sp" />
         <RadioGroup
+            android:id="@+id/id_inputGender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/id_inputGender"
             android:layout_toRightOf="@id/id_gender"
             android:checkedButton="@id/info_gendermale"
             android:orientation="horizontal">
             <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/info_gendermale"
-                android:text="@string/infogendermale"
-                android:textSize="14dp"
-                android:layout_marginLeft="10dp"/>
-            <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="@string/infogendermale"
+                android:textSize="16sp" />
+            <RadioButton
                 android:id="@+id/info_genderfemale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:text="@string/infogenderfemale"
-                android:textSize="14dp"
-                android:layout_marginLeft="50dp"/>
+                android:textSize="16sp" />
         </RadioGroup>
     </RelativeLayout>
+
     <RelativeLayout
-        android:layout_width="250dp"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="40dp">
+        android:layout_marginBottom="85dp">
         <TextView
             android:id="@+id/id_species"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="5dp"
             android:text="@string/infospecies"
-            android:textSize="14dp" />
+            android:textSize="16sp" />
         <RadioGroup
             android:id="@+id/id_inputSpecies"
             android:layout_width="wrap_content"
@@ -120,20 +129,19 @@
             android:checkedButton="@id/info_speciescat"
             android:orientation="horizontal">
             <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/info_speciescat"
-                android:text="@string/infospeciescat"
-                android:textSize="14dp"
-                android:layout_marginLeft="10dp"/>
-
-            <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="@string/infospeciescat"
+                android:textSize="16sp" />
+            <RadioButton
                 android:id="@+id/info_speciesdog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:text="@string/infospeciesdog"
-                android:textSize="14dp"
-                android:layout_marginLeft="36dp"/>
+                android:textSize="16sp" />
         </RadioGroup>
     </RelativeLayout>
 
