--- a/project/app/src/main/res/layout/list_pet.xml
+++ b/project/app/src/main/res/layout/list_pet.xml
@@ -22,9 +22,10 @@
                 android:textSize="17dp"
                 android:layout_marginLeft="50dp"/>
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="7dp"
                 android:src="@mipmap/editbutton"
                 android:layout_toRightOf="@id/info_name"/>
         </RelativeLayout>
