--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -9,12 +9,12 @@
     tools:context=".petbus_profile">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/colorPrimary"
+        android:layout_height="53dp"
+        android:background="@color/colorWhrite"
         android:gravity="center"
         android:id="@+id/topbar_lineralayout"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal">
-
         <TextView
             android:id="@+id/txt_profileTitle"
             android:layout_width="fill_parent"
@@ -22,35 +22,40 @@
             android:clickable="true"
             android:gravity="center_horizontal"
             android:text="@string/petprofile"
-            android:textColor="#ffffff"
-            android:textStyle="bold"
+            android:textSize="21sp"
+            android:textColor="@color/colorBlack"
             android:layout_marginTop="6dp"/>
         <ImageButton
             android:id="@+id/btn_profileBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="3dp"
-            android:background="#00000000"
+            android:layout_marginLeft="19dp"
+            android:background="@color/colorWhrite"
             android:clickable="false"
             android:layout_alignParentLeft ="true"
+            android:layout_centerVertical="true"
             android:src="@mipmap/arrarryleft_normal" />
         <ImageButton
             android:id="@+id/btn_profileAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="3dp"
-            android:background="#00000000"
+            android:layout_marginRight="19dp"
+            android:background="@color/colorWhrite"
+            android:layout_centerVertical="true"
             android:clickable="false"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/add_normal" />
+            android:src="@mipmap/add_button" />
     </RelativeLayout>
 
     <ListView
         android:id="@+id/list_pet"
         android:descendantFocusability="blocksDescendants"
+        android:background="@color/app_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="#00000000"></ListView>
+        android:divider="@color/app_background"
+        android:dividerHeight="13dp"
+        android:layout_margin="16dp">
+
+    </ListView>
 </LinearLayout>
