--- a/project/app/src/main/res/layout/actionfragment_diary.xml
+++ b/project/app/src/main/res/layout/actionfragment_diary.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_marginBottom="50dp"
-              android:layout_height="match_parent">
+            android:orientation="vertical"
+            android:background="@color/app_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginTop ="17dp"
+        android:layout_height="56dp"
+        android:background="@color/colorWhite"
         android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:clickable="false"
+            android:maxWidth="21dp"
+            android:maxHeight="21dp"
+            android:minWidth="21dp"
+            android:minHeight="21dp"
+            android:layout_marginLeft ="23dp"
+            android:layout_marginTop ="17dp"
+            android:src="@mipmap/add_time" />
         <TextView
+            android:layout_marginLeft ="5dp"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             style="@style/diary_addfragment_text"
@@ -18,7 +31,7 @@
             android:text="@string/time"/>
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="40dp"
+            android:layout_height="fill_parent"
             android:gravity="right"
             android:orientation="horizontal">
             <TextView
@@ -30,22 +43,30 @@
                 android:text="@string/time"/>
         </LinearLayout>
     </LinearLayout>
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="#aa000000" />
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:gravity="center"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="14dp"
+        android:background="@color/colorWhite"
         android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:clickable="false"
+            android:maxWidth="21dp"
+            android:maxHeight="21dp"
+            android:minWidth="21dp"
+            android:minHeight="21dp"
+            android:layout_marginLeft ="23dp"
+            android:layout_marginTop ="17dp"
+            android:src="@mipmap/add_action" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             style="@style/diary_addfragment_text"
             android:gravity="center_vertical"
+            android:layout_marginLeft ="5dp"
             android:text="@string/lovepet"/>
         <LinearLayout
             android:layout_width="fill_parent"
@@ -103,19 +124,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/photo_normal" />
+
                 <ImageView
-                    android:gravity="center"
                     android:id="@+id/pet_photo_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:adjustViewBounds="true"
                     android:background="#00000000"
                     android:clickable="false"
-                    android:adjustViewBounds="true"
-                    android:maxHeight="80dp"
+                    android:gravity="center"
                     android:maxWidth="80dp"
-                    android:minHeight="80dp"
+                    android:maxHeight="80dp"
                     android:minWidth="80dp"
-                    android:layout_marginLeft ="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:minHeight="80dp"
                     android:src="@mipmap/photo_normal" />
             </RelativeLayout>
             <TextView
@@ -126,40 +148,46 @@
                 android:text=">"/>
         </LinearLayout>
     </LinearLayout>
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="#aa000000" />
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:background="@color/colorWhite"
+        android:layout_marginTop="14dp"
+        android:layout_height="56dp"
         android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:clickable="false"
+            android:maxWidth="21dp"
+            android:maxHeight="21dp"
+            android:minWidth="21dp"
+            android:minHeight="21dp"
+            android:layout_marginLeft ="23dp"
+            android:layout_marginTop ="17dp"
+            android:src="@mipmap/add_action" />
         <TextView
+            android:layout_marginLeft ="5dp"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             style="@style/diary_addfragment_text"
             android:gravity="center_vertical"
             android:text="@string/actiontype"/>
+
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
+            android:layout_height="fill_parent"
+            android:gravity="right|center_vertical"
             android:orientation="horizontal">
+
             <Spinner
                 android:id="@+id/action_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:choiceMode="singleChoice"/>
+                android:choiceMode="singleChoice"
+                android:gravity="center_vertical" />
         </LinearLayout>
     </LinearLayout>
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="#aa000000" />
     <LinearLayout
         android:layout_height="150dp"
         android:layout_width="match_parent"
@@ -181,8 +209,8 @@
         android:layout_width="fill_parent"
         android:layout_weight="1"
         android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginLeft="29dp"
         android:gravity="left"
         android:orientation="vertical">
             <ImageView
@@ -191,15 +219,18 @@
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:background="#00000000"
-                android:minHeight="80dp"
-                android:minWidth="80dp"
+                android:minHeight="32dp"
+                android:minWidth="24dp"
+                android:maxHeight="32dp"
+                android:maxWidth="24dp"
                 android:src="@mipmap/camera_normal"/>
     </LinearLayout>
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
+        android:layout_width="100dp"
+        android:layout_height="36dp"
+        android:layout_marginRight="130dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginBottom="67dp"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
