--- a/project/app/src/main/res/layout/petbus_action.xml
+++ b/project/app/src/main/res/layout/petbus_action.xml
@@ -21,15 +21,19 @@
             style="@style/titlebar_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginBottom="12dp"
             android:clickable="true"
-            android:gravity="center_vertical|center_horizontal"
+            android:gravity="center_horizontal|clip_vertical"
             android:text="@string/petdiary" />
         <ImageButton
             android:id="@+id/leftreturn_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="3dp"
+            android:layout_marginLeft="19dp"
+            android:layout_marginTop="23dp"
             android:background="#00000000"
             android:clickable="false"
             android:layout_alignParentLeft ="true"
